<resources>
    <string name="app_name">Musicore</string>
    <string name="input_username">Username</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_tab">tab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
