<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:gravity="center">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/idtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_bg"
            android:hint="@string/input_username"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_bg"
            android:drawableRight="@drawable/key"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/Blogin"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg"
            android:onClick="login"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Forgot Password?"
            android:textColor="@color/gray2"
            android:background="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/Bsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="15dp" />

</RelativeLayout>