<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_bg"
            android:hint="@string/input_username"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_bg"
            android:hint="@string/input_email"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_bg"
            android:drawableRight="@drawable/key"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/signup"
            android:layout_width="155dp"
            android:layout_height="45dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="#000"
        android:text="Login Now"
        android:textColor="#fff"
        android:textSize="15dp" />

</RelativeLayout>